--- a/src/sample.html
+++ b/src/sample.html
@@ -5,21 +5,77 @@
 	<script src="./js/jsaccordion.js"></script>
 </head>
 <body>
-	<div id="test1">new object by selector then test it</div>
-	<div id="test2">new object by dom element then test</div>
-	<div id="test3">direct call by selector then test immediately</div>
-	<div id="test4">direct call and did not keep result then test immediately</div>
-	<script>
-        var a = new JSAccordion( '#test1' );
-        a.test('red');
-
-        var b = new JSAccordion( document.getElementById('test2') );
-        b.test('green');
-
-        var c = JSAccordion( '#test3' ).test('blue');
-
-        JSAccordion( document.getElementById('test4') ).test('cyan');
-
-	</script>
+<div class="container">
+	<ul class="list">
+		<li class="list-item collapsed">
+			<div class="header">
+				<span class="status-icon"></span>
+				<h3>section #1 title</h3>
+			</div>
+			<div class="body">
+				<p>multi line text can put here<br>
+					it is not only for us. lorem ipsum dollor amore. or other text here<br>
+					i am here
+				</p>
+				<p>another paragraph can set here<br>
+					it is multiline text<br>
+					no problem.
+				</p>
+			</div>
+		</li>
+		<li class="list-item expanded">
+			<div class="header">
+				<span class="status-icon"></span>
+				<h3>section #2 title</h3>
+			</div>
+			<div class="body">
+				<p>multi line text can put here<br>
+					it is not only for us. lorem ipsum dollor amore. or other text here<br>
+					i am here
+				</p>
+				<p>another paragraph can set here<br>
+					it is multiline text<br>
+					no problem.
+				</p>
+			</div>
+		</li>
+	</ul>
+</div>
+<div class="container">
+	<ul class="list">
+		<li class="list-item collapsed">
+			<div class="header">
+				<span class="status-icon"></span>
+				<h3>section #1 title</h3>
+			</div>
+			<div class="body">
+				<p>multi line text can put here<br>
+					it is not only for us. lorem ipsum dollor amore. or other text here<br>
+					i am here
+				</p>
+				<p>another paragraph can set here<br>
+					it is multiline text<br>
+					no problem.
+				</p>
+			</div>
+		</li>
+		<li class="list-item expanded">
+			<div class="header">
+				<span class="status-icon"></span>
+				<h3>section #2 title</h3>
+			</div>
+			<div class="body">
+				<p>multi line text can put here<br>
+					it is not only for us. lorem ipsum dollor amore. or other text here<br>
+					i am here
+				</p>
+				<p>another paragraph can set here<br>
+					it is multiline text<br>
+					no problem.
+				</p>
+			</div>
+		</li>
+	</ul>
+</div>
 </body>
 </html>
