add event and css

--- a/src/sample.html
+++ b/src/sample.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8"/>
 	<link href="css/jsaccordion.css" rel="stylesheet">
 	<script src="./js/jsaccordion.js"></script>
 </head>
